momo-project/kubernetes/backend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  revisionHistoryLimit: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 20%
      maxUnavailable: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: gitlab.praktikum-services.ru:5050/std-010-008/momo-project/momo-backend:1.0.0
          resources:
            requests:
              cpu: 0.1
              memory: "512Mi"
            limits:
              cpu: 0.2
              memory: "1024Mi"
          imagePullPolicy: Always
          ports:
            - name: backend
              containerPort: 8081
      imagePullSecrets:
        - name: docker-config-secret

---
